[package]
name = "wrapped_slab_derive"
version = "0.2.1"
edition = "2021"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
rust-version = "1.62"
license = "MIT"
description = "WrappedSlab: Auto-generate newtype idiom based on Slab"
repository = "https://github.com/lun3x/wrapped_slab"
keywords = ["slab"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Library for parsing rust tokens, used by most proc macro crates
syn = { version = "1.0", features = ["full"] }

# Library for parsing syntax trees into rust tokens, used by most proc macro crates
quote = { version = "1.0" }

# Necessary for syn and quote
proc-macro2 = { version = "1.0" }

# Better error handling in proc macros, avoids using panic!
proc-macro-error = { version = "1.0" }

[lib]
proc-macro = true
